# pipe2drive

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build_release.sh  doit_without_upload.patch
.github/workflows/: unittest.yml
.obs/: workflows.yml
snap/: snapcraft.yaml
src/: arguments.rs  auth.rs  crypto.rs  drive.rs  logger.rs  main.rs  misc.rs  pipe_buffer.rs
src/drive/: delete.rs  download.rs  info.rs  list.rs  mod.rs  rename.rs  set_description.rs  upload.rs
src/pipe_buffer/: handle_writer.rs  mod.rs  pipe_buffer.rs  test_buffer.rs  unittest_handle_writer.rs  unittest_pipe_buffer.rs  unittest_test_buffer.rs
