[package]
name = "pipe2drive"
version = "0.2.2"
authors = ["Dennis Værum <github@varum.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colored"]

[dependencies]
google-drive3 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
hyper-native-tls = "0.3"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"

log = "*"
clap = "*"
bytesize = "*"
regex = "*"
atty = "*"
dirs = "*"
lazy_static = "*"
prettytable-rs = "*"
chrono = "*"
colored = { version = "*", optional = true }
