[package]
name = "pipe2drive"
version = "0.3.0"
authors = ["Dennis Værum <github@varum.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colored"]

[dependencies]
google-drive3 = "2.0.5+20210322"
#google-drive3 = {path = "../google-apis-rs/gen/drive3"}
tokio = { version = "^1.0", features = ["full"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-rustls = "^0.22"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^5.0"

age = "*"
secrecy ="*"

log = "*"
clap = "*"
bytesize = "*"
regex = "*"
atty = "*"
dirs = "*"
lazy_static = "*"
prettytable-rs = "*"
chrono = "*"
colored = { version = "*", optional = true }
