[package]
name = "pipe2drive"
version = "0.3.0"
authors = ["Dennis Værum <github@varum.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colored"]

[dependencies]
do_not_close_async_writer = { path = "../do_not_close_async_writer-rs" }

google-drive3 = "4.0.4+20220225"
#google-drive3 = {path = "../google-apis-rs/gen/drive3"}
tokio = { version = "^1.0", features = ["full"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-rustls = "^0.23.0"
serde = "^1.0"
serde_json = "^1.0"

age = { version = "*", features = ["async"] }
# age = { path = "./external_libs/rage/age" }
secrecy = "*"
ringbuf = "0.2.8"

futures = { version = "*" }
tokio-pipe = { version="*" }
async-compat = "*"
pin-project = "*"
tokio-util = { version = "*", features = ["compat"] }
chacha20poly1305 = "*"

log = "*"
clap = { version = "*", features = ["derive"] }
bytesize = "*"
regex = "*"
atty = "*"
dirs = "*"
lazy_static = "*"
prettytable-rs = "*"
chrono = "*"
colored = { version = "*", optional = true }


[dev-dependencies]
function_name = "*"
